package com.mandeepa.das_backend.constant;

public enum UserType {
    ADMIN,
    DOCTOR,
    PATIENT,
}
